# graphics-course

cmake/: thirdparty.cmake
common/render_utils/shaders/: unpack_attributes.glsl
common/scene/: SceneManager.cpp  SceneManager.hpp  perlin_noise.hpp
resources/scenes/Avocado/: Avocado_baked.gltf
tasks/: CMakeLists.txt
tasks/deferred/baker/: CMakeLists.txt
tasks/deferred/renderer/: CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/deferred/renderer/shaders/: HDR_to_LDR.frag  deferred.frag  static_mesh.frag  static_mesh.vert  terrain.frag  terrain.tesc  (+3 more)
tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt
tasks/inflight_frames/shaders/: main_shader.frag  procedural_texture.comp
tasks/local_shadertoy1/: App.cpp  App.hpp
tasks/local_shadertoy1/shaders/: toy.comp
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy2/shaders/: main_shader.frag  procedural_texture.comp
tasks/many_objects/baker/: CMakeLists.txt
tasks/many_objects/renderer/: CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/model_bakery/baker/: main.cpp
tasks/terrain/baker/: CMakeLists.txt
tasks/terrain/renderer/: CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/tonemapping/baker/: CMakeLists.txt
tasks/tonemapping/renderer/: CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/tonemapping/renderer/shaders/: HDR_to_LDR.frag  HDR_to_LDR.vert  gpu_culling.comp  static_mesh.frag  static_mesh.vert  terrain.frag  terrain.tese  terrain.vert  tonmap.comp  tonmap0.comp  tonmap1.comp  tonmap2.comp
(+6 files in other folders)
